--- a/FICData.CIPC/CIPC.FICData.csproj
+++ b/FICData.CIPC/CIPC.FICData.csproj
@@ -52,7 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnterpriseModel.cs" />
     <Compile Include="FICData.cs" />
+    <Compile Include="IndividualModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
